<resources>
    <string name="app_name">BoltoMart</string>
    <string name="login">LOGIN</string>
    <string name="number_hint">Mobile number</string>
    <string name="password_hint">Password</string>
    <string name="vendor_register_here">Seller/Vendor? Register here</string>
    <string name="i_want_to_buy">I want to buy</string>
    <string name="i_am_a_vendor">I am a vendor</string>
    <string name="please_enter_valid_data_to_verify_your_identity_and_approve_your_login_credentials">Please Enter Valid Data to verify your identity and approve your login credentials</string>
    <string name="gstin">GSTIN(*)</string>
    <string name="fetch">Fetch</string>
    <string name="sign_up">Sign Up</string>
    <string name="boltomart">Boltomart</string>
    <string name="search_your_hardware_products">Search Your Hardware Products</string>
    <string name="categories">Categories</string>
    <string name="see_all">see all</string>
    <string name="nearby_shops">Nearby Shops</string>
    <string name="hardware_fittings">Hardware Fittings</string>
    <string name="sri_venkateshwara_hardwares">Sri Venkateshwara Hardwares</string>
    <string name="_3_km">3 km</string>
    <string name="_4_5">4.5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover_sustainbale_living_with_us">Discover sustainbale living with us</string>
    <string name="sign_up_as_a_user_to_explore_our_curated_selection_of_eco_friendly_products">Sign up as a user to explore our curated selection of eco-friendly products</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_otp_sent_at">Enter the otp sent at</string>
    <string name="_1234567890">1234567890</string>
    <string name="otp">OTP:</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="didn_t_receive_otp">Didn\'t receive OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="grow_your_business_with_us">Grow your business with us</string>
    <string name="join_as_a_vendor_and_showcase_your_eco_friendly_products_to_our_conscious_buyers">Join as a vendor and showcase your eco-friendly products to our conscious buyers.</string>
    <string name="gst_number">GST Number</string>
    <string name="enter_your_gstin_number">Enter your GSTIN number</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="signup_as_vendor">SignUp as Vendor</string>
    <string name="_200_reviews"><u>200 reviews</u></string>
    <string name="_25_mins">25 mins</string>
    <string name="I">|</string>
    <string name="villupuram_locality">Villupuram Locality</string>
    <string name="our_products">Our Products</string>
    <string name="filter">Filter</string>
    <string name="resend_code_in">Resend Code in :</string>
</resources>