<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.userauth.SignUpOtpActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:paddingTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/otp_verification"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/enter_the_otp_sent_at"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/mobileFetchTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/_1234567890"
                android:textAlignment="textEnd"
                android:textColor="@color/figmaRed"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical"
            android:paddingTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout2">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/otp"
                android:textSize="20sp" />

            <!--            <EditText-->
            <!--                android:id="@+id/otpEditText"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="48dp"-->
            <!--                android:background="@color/figmaGrey"-->
            <!--                android:ems="10"-->
            <!--                android:hint="@string/enter_otp"-->
            <!--                android:inputType="number"-->
            <!--                android:paddingStart="5dp" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutOtp"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/otp"
                app:boxStrokeColor="@color/black"
                app:counterEnabled="true"
                app:counterMaxLength="6"
                app:errorEnabled="true"
                app:errorIconDrawable="@drawable/baseline_error_24"
                app:helperText="Required*"
                app:helperTextTextColor="@color/red"
                app:prefixTextColor="@color/figmaRed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otpTextInputEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="6" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtResendText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/resend_code_in"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtResendTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/figmaRed"
                    android:textSize="16sp" />

            </LinearLayout>


            <Button
                android:id="@+id/verifyOTPButton"
                style="@style/Widget.HouseMartApplication.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/verify_otp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llOtpSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/didn_t_receive_otp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/resendOtpTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/resend_otp"
                android:textColor="@color/figmaRed"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>