<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="21dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <View
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/vect_location" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:paddingStart="3dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:fontFamily="@font/poppinslight"
                        android:text="Chennai"
                        android:textColor="#101828"
                        android:textFontWeight="400"
                        android:textSize="16sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <View
                        android:layout_width="40dp"
                        android:paddingEnd="5dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/vect_notification" />

                    <View
                        android:layout_gravity="center"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/ic_heart_svg" />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </RelativeLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="#F2F4F7"
            android:hint="@string/search_your_hardware_products"
            app:hintTextColor="#667085">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/vect_search_bar">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="21dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/poppinslight"
                    android:text="@string/categories"
                    android:textColor="#101828"
                    android:textFontWeight="400"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/poppinslight"
                    android:text="@string/see_all"
                    android:textColor="#101828"
                    android:textFontWeight="400"
                    android:textSize="16sp" />

            </RelativeLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="72dp"
                    android:layout_height="108dp"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="68dp"
                        android:layout_height="68dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_category_1"
                        app:civ_border_color="#FF000000" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/hardware_fittings" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="72dp"
                    android:layout_height="108dp"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="68dp"
                        android:layout_height="68dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_category_1"
                        app:civ_border_color="#FF000000" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/hardware_fittings" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="72dp"
                    android:layout_height="108dp"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="68dp"
                        android:layout_height="68dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_category_1"
                        app:civ_border_color="#FF000000" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/hardware_fittings" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="72dp"
                    android:layout_height="108dp"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="68dp"
                        android:layout_height="68dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_category_1"
                        app:civ_border_color="#FF000000" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/hardware_fittings" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </HorizontalScrollView>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="72dp"
                    android:layout_height="108dp"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="68dp"
                        android:layout_height="68dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_category_1"
                        app:civ_border_color="#FF000000" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/hardware_fittings" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="72dp"
                    android:layout_height="108dp"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="68dp"
                        android:layout_height="68dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_category_1"
                        app:civ_border_color="#FF000000" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/hardware_fittings" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="72dp"
                    android:layout_height="108dp"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="68dp"
                        android:layout_height="68dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_category_1"
                        app:civ_border_color="#FF000000" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/hardware_fittings" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="72dp"
                    android:layout_height="108dp"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="68dp"
                        android:layout_height="68dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_category_1"
                        app:civ_border_color="#FF000000" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/hardware_fittings" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </HorizontalScrollView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="21dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/poppinslight"
                    android:text="@string/nearby_shops"
                    android:textColor="#101828"
                    android:textFontWeight="400"
                    android:textSize="16sp" />

            </RelativeLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvShops"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="21dp"
            android:layout_marginTop="20dp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>
